--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -30,6 +30,11 @@
 					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+          <a class="btn btn-hover btn-floating m-1" href="#!" role="button" (click)="loginWithGoogle()"><i class="fab fa-google"
+            style="font-size: 2.5rem;"></i></a>
+            
+            <a class="btn btn-hover btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook"
+              style="font-size: 2.6rem;"></i></a>
 				</div>
 				<span>or use your account</span>
 				<input type="email" placeholder="Email" name="email" formControlName="email"/>
