--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -27,12 +27,12 @@
 			<form class="needs-validation" novalidate [formGroup]="signinform" (ngSubmit)="submitSigninForm()">
 				<h1>Sign in</h1>
 				<div class="social-container">
-					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+					<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a> -->
           <a class="btn btn-hover btn-floating m-1" href="#!" role="button" (click)="loginWithGoogle()"><i class="fab fa-google"
             style="font-size: 2.5rem;"></i></a>
-            
+
             <a class="btn btn-hover btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook"
               style="font-size: 2.6rem;"></i></a>
 				</div>
