--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -30,10 +30,10 @@
 					<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a> -->
-          <a class="btn btn-hover btn-floating m-1" href="#!" role="button" (click)="loginWithGoogle()"><i class="fab fa-google"
+          <a class="btn   m-1" href="#!" role="button" (click)="loginWithGoogle()"><i class="fab fa-google"
             style="font-size: 2.5rem;"></i></a>
 
-          <a class="btn btn-hover btn-floating m-1" href="#!" role="button" (click)="signInWithFB()"><i class="fab fa-facebook"
+          <a class="btn   m-1" href="#!" role="button" (click)="signInWithFB()"><i class="fab fa-facebook"
               style="font-size: 2.6rem;"></i></a>
 				</div>
 				<span>or use your account</span>
