--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-8 mx-auto my-auto mt-5" #body>
+<div class="col-md-8 mx-auto my-auto mt-5" #body ngsReveal>
 	<div class="container" id="container">
 		<div class="form-container sign-up-container">
 			<!-- <form [formGroup]="signupform" (ngSubmit)="submitSignupForm()" novalidate [mustMatch]="['password', 'confirmPassword']"> -->
