--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .register {
-  background: url("assets/img/pattern.jpg") no-repeat center;
+  background: url("./assets/img/pattern.jpg") no-repeat center;
   background-attachment: fixed;
 }
 
