--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,11 @@ body {
   background-attachment: fixed;
 }
 
+.register1 {
+  background: url("./assets/img/signup.png") no-repeat center;
+  background-attachment: fixed;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
