--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,10 @@ body {
   background-attachment: fixed;
 }
 
-
+.register1 {
+  background: url("./assets/img/signup.png") no-repeat center;
+  background-attachment: fixed;
+}
 
 
 html, body { height: 100%; }
