--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,11 @@ body {
   background-attachment: fixed;
 }
 
+.admindb {
+  background: url("./assets/img/admin_dashboard.png") no-repeat center;
+  background-attachment: fixed;
+}
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
