--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -161,9 +161,10 @@
 
               <div >
                 <img class="avatar" [src]="url+request.user.avatar" alt="">
-                <p>{{request.user.fullname}}</p>
+                <B> {{request.user.fullname}}</B>
             </div>
 
+            <br>
               <h4 class="nt">{{request.title}}</h4>
 
               <p class="text-muted">{{request.content}}</p>
