--- a/src/app/user/request-novels/request-novels.component.html
+++ b/src/app/user/request-novels/request-novels.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card ngsReveal>
   <mat-card-header>
     <p class="exp-header text-center mt-4 mb-4 w-100">Post And Request Novels</p>
   </mat-card-header>
