--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Raleway;
-  background: url("assets/img/pattern.jpg")
+  background: url("assets/img/pattern.jpg");
 }
 
 html,
@@ -13,12 +13,24 @@ body {
 }
 
 .register {
-  background: url("assets/img/pattern.jpg") no-repeat center;
+  background: url("./assets/img/pattern.jpg") no-repeat center;
   background-attachment: fixed;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
