--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,19 +8,20 @@
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
-        <li><a [routerLink]="['/home']" routerLinkActive="router-link-active" >Home</a></li>
+        <li><a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a></li>
 
 
         <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="#" >About Us</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="testimonials.html">Testimonials</a></li>
             <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active" >Purchase Novels</a></li>
-                <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Exchange Novels</a></li>
-                <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active" >Rent Novels</a></li>
+                <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active">Purchase Novels</a></li>
+                <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active">Exchange Novels</a>
+                </li>
+                <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active">Rent Novels</a></li>
                 <li><a href="#">Deep Drop Down 4</a></li>
                 <li><a href="#">Deep Drop Down 5</a></li>
               </ul>
@@ -31,14 +32,14 @@
 
         <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Exchange Novels</a></li>
-            <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active" >Purchase Novels</a></li>
-            <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active" >Rent Novels</a></li>
+            <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active">Exchange Novels</a></li>
+            <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active">Purchase Novels</a></li>
+            <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active">Rent Novels</a></li>
           </ul>
         </li>
 
         <!-- <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Novels</a></li> -->
-        <li><a [routerLink]="['/profile']" routerLinkActive="router-link-active" >Portfolio</a></li>
+        <li><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Portfolio</a></li>
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
@@ -68,10 +69,12 @@
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
             <h2>Welcome to BOOK<span style="color: #1bbd36;">WORMS</span></h2>
-              <p>BookWorms is like a trade window of novels especially for Bibliophile.
-                Some of the novels are now very rare and are neither being published nor available in shops or at any website.
-                On this site People can post their novels collection on our website, so that people who need those novels, can get it from our website.
-              </p>
+            <p>BookWorms is like a trade window of novels especially for Bibliophile.
+              Some of the novels are now very rare and are neither being published nor available in shops or at any
+              website.
+              On this site People can post their novels collection on our website, so that people who need those novels,
+              can get it from our website.
+            </p>
 
             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
           </div>
@@ -83,7 +86,8 @@
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
             <h2>Lorem Ipsum Dolor</h2>
-            <p>Some of the novels are now very rare and are neither being published nor available in shops or at any website.</p>
+            <p>Some of the novels are now very rare and are neither being published nor available in shops or at any
+              website.</p>
             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
           </div>
         </div>
@@ -94,7 +98,8 @@
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
             <h2>Sequi ea ut et est quaerat</h2>
-            <p>On this site People can post their novels collection on our website, so that people who need those novels, can get it from our website.</p>
+            <p>On this site People can post their novels collection on our website, so that people who need those
+              novels, can get it from our website.</p>
             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
           </div>
         </div>
@@ -137,10 +142,12 @@
           <ul>
             <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
             <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+              irure dolor in reprehenderit in</li>
           </ul>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
             magna aliqua.
           </p>
         </div>
@@ -154,32 +161,26 @@
 
       <div class="row">
         <div class="col-md-4 mt-5" *ngFor="let request of requestList">
-
           <div class="card">
-
-
-
             <div class="card-body">
-
-              <div >
+              <div>
                 <img class="avatar" [src]="url+request.user.avatar" alt="">
                 <B> {{request.user.fullname}}</B>
-            </div>
-
-            <br>
+              </div>
+              <br>
               <h4 class="nt">{{request.title}}</h4>
-
-              <p class="text-muted">{{request.content.substring(1, 100)}} ...</p>
-
+              <p class="text-muted">{{request.content.substring(0, 100)}} ...</p>
             </div>
-
-            <nb-card-action style="padding: 1rem;">
-              <button class="btn btn-primary" [routerLink]="['/app/listrequest']" >View More</button>
-            </nb-card-action>
+            <!-- <nb-card-action style="padding: 1rem;">
+                <button class="btn btn-primary" [routerLink]="['/app/listrequest']" >View More</button>
+              </nb-card-action> -->
           </div>
         </div>
       </div>
-
+      <button class="btn btn-primary"
+      [routerLink]="['/app/listrequest']"
+      routerLinkActive="router-link-active">
+      View More</button>
     </div>
   </section>
 
@@ -207,7 +208,8 @@
           <div class="portfolio-info">
             <h4>App 1</h4>
             <p>App</p>
-            <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -217,7 +219,8 @@
           <div class="portfolio-info">
             <h4>Web 3</h4>
             <p>Web</p>
-            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -227,7 +230,8 @@
           <div class="portfolio-info">
             <h4>App 2</h4>
             <p>App</p>
-            <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -237,7 +241,8 @@
           <div class="portfolio-info">
             <h4>Card 2</h4>
             <p>Card</p>
-            <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -247,7 +252,8 @@
           <div class="portfolio-info">
             <h4>Web 2</h4>
             <p>Web</p>
-            <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -257,7 +263,8 @@
           <div class="portfolio-info">
             <h4>App 3</h4>
             <p>App</p>
-            <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -267,7 +274,8 @@
           <div class="portfolio-info">
             <h4>Card 1</h4>
             <p>Card</p>
-            <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -277,7 +285,8 @@
           <div class="portfolio-info">
             <h4>Card 3</h4>
             <p>Card</p>
-            <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -287,7 +296,8 @@
           <div class="portfolio-info">
             <h4>Web 3</h4>
             <p>Web</p>
-            <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
@@ -360,4 +370,3 @@
   </section><!-- End Our Clients Section -->
 
 </main><!-- End #main -->
-
