--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -177,7 +177,8 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary"
+      <br>
+      <button class="btn btn-danger"
       [routerLink]="['/app/listrequest']"
       routerLinkActive="router-link-active">
       View More</button>
