--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -174,6 +174,10 @@
             <!-- <nb-card-action style="padding: 1rem;">
                 <button class="btn btn-primary" [routerLink]="['/app/listrequest']" >View More</button>
               </nb-card-action> -->
+
+                <button class="btn btn-primary" (click)="repondToUser(request.user._id)">Respond</button>
+                <button class="btn btn-primary" (click)="open(request)">Open</button>
+
           </div>
         </div>
       </div>
