--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -25,9 +25,9 @@
             </div>
 
             <nb-card-action style="padding: 1rem;">
-              <button nbButton status="primary" (click)="open(request)"><nb-icon icon="heart"></nb-icon>Open</button>
+              <button nbButton status="primary" (click)="open(request)"><nb-icon icon="eye-outline"></nb-icon>Open</button>
               <button nbButton status="primary" (click)="repondToUser(request.user._id)"><nb-icon icon="heart"></nb-icon>Respond</button>
-              
+
             </nb-card-action>
           </div>
         </div>
