--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -26,7 +26,7 @@
 
             <nb-card-action style="padding: 1rem;">
               <button nbButton status="primary" (click)="open(request)"><nb-icon icon="eye-outline"></nb-icon></button>
-              <button nbButton status="primary" (click)="repondToUser(request.user._id)"><nb-icon icon="heart"></nb-icon>Respond</button>
+              <button nbButton status="primary" (click)="repondToUser(request.user._id)"><nb-icon icon="message-circle"></nb-icon></button>
 
             </nb-card-action>
           </div>
