--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -20,7 +20,7 @@
 
               <h4 class="nt">{{request.title}}</h4>
 
-              <p class="text-muted">{{request.content}}</p>
+              <p class="text-muted">{{request.content.substring(0, 200)}}...</p>
 
             </div>
 
