--- a/src/app/request-dialog/request-dialog.component.html
+++ b/src/app/request-dialog/request-dialog.component.html
@@ -31,7 +31,7 @@
                 <button nbButton status="primary" (click)="open()"><nb-icon icon="heart"></nb-icon>Open</button>
               </nb-card-action> -->
 
-              <button class="btn btn-primary" (click)="repondToUser(request.user._id)">Respond</button>
+              <button class="btn btn-primary" (click)="repondToUser(requestData.user._id)">Respond</button>
             </div>
           </div>
         </div>
