--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -25,8 +25,8 @@
             </div>
 
             <nb-card-action style="padding: 1rem;">
-              <button nbButton status="primary" (click)="open(request)"><nb-icon icon="eye-outline"></nb-icon></button>
-              <button nbButton status="primary" (click)="repondToUser(request.user._id)"><nb-icon icon="message-circle"></nb-icon></button>
+              <button nbButton status="success" (click)="open(request)"><nb-icon icon="expand"></nb-icon></button>
+              <button nbButton status="success" (click)="repondToUser(request.user._id)"><nb-icon icon="paper-plane"></nb-icon></button>
 
             </nb-card-action>
           </div>
