--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -13,17 +13,21 @@
 
             <div class="card-body">
 
-              <div >
-              <nb-user size="medium" [name]="request.user.fullname" [picture]="url+request.user.avatar">
-              </nb-user>
-            </div>
+              <div>
+                <nb-user size="medium" [name]="request.user.fullname" [picture]="url+request.user.avatar">
+                </nb-user>
+              </div>
 
               <h4 class="nt">{{request.title}}</h4>
               <p class="text-muted">{{request.content.substring(0, 200)}}...</p>
             </div>
             <nb-card-action style="padding: 1rem;">
-              <button nbButton status="success" (click)="open(request)"><nb-icon icon="expand"></nb-icon></button>
-              <button nbButton status="success" (click)="repondToUser(request.user._id)"><nb-icon icon="paper-plane"></nb-icon></button>
+              <button nbButton status="success" (click)="open(request)">
+                <nb-icon icon="expand"></nb-icon>
+              </button>
+              <button nbButton status="success" (click)="repondToUser(request.user._id)">
+                <nb-icon icon="paper-plane"></nb-icon>
+              </button>
             </nb-card-action>
           </div>
         </div>
