--- a/src/app/authentication/list-exchange/list-exchange.component.html
+++ b/src/app/authentication/list-exchange/list-exchange.component.html
@@ -28,6 +28,8 @@
             <mat-option value="romance">Romance</mat-option>
             <mat-option value="sci-fi">Sci-Fi</mat-option>
             <mat-option value="kids">Kids</mat-option>
+            <mat-option value="horror">Horror</mat-option>
+            
           </mat-select>
         </mat-form-field>
 
