--- a/src/app/authentication/list-exchange/list-exchange.component.html
+++ b/src/app/authentication/list-exchange/list-exchange.component.html
@@ -23,13 +23,14 @@
         <mat-form-field class="w-100 mt-4" appearance="outline">
           <mat-label>Genre</mat-label>
           <mat-select [(ngModel)]="selGenre">
+            <mat-option value="action">Action</mat-option>
             <mat-option value="fantasy">Fantasy</mat-option>
             <mat-option value="mystry">Mystry</mat-option>
             <mat-option value="romance">Romance</mat-option>
             <mat-option value="sci-fi">Sci-Fi</mat-option>
             <mat-option value="kids">Kids</mat-option>
             <mat-option value="horror">Horror</mat-option>
-            
+
           </mat-select>
         </mat-form-field>
 
