--- a/src/app/authentication/list-exchange/list-exchange.component.html
+++ b/src/app/authentication/list-exchange/list-exchange.component.html
@@ -27,7 +27,7 @@
             <mat-option value="fantasy">Fantasy</mat-option>
             <mat-option value="mystry">Mystry</mat-option>
             <mat-option value="romance">Romance</mat-option>
-            <mat-option value="sci-fi">Sci-Fi</mat-option>
+            <mat-option value="thriller">Thriller</mat-option>
             <mat-option value="kids">Kids</mat-option>
             <mat-option value="horror">Horror</mat-option>
 
