--- a/src/app/authentication/list-exchange/list-exchange.component.html
+++ b/src/app/authentication/list-exchange/list-exchange.component.html
@@ -25,7 +25,7 @@
           <mat-select [(ngModel)]="selGenre">
             <mat-option value="action">Action</mat-option>
             <mat-option value="fantasy">Fantasy</mat-option>
-            <mat-option value="mystry">Mystry</mat-option>
+            <mat-option value="techno-thriller">Techno-Thriller</mat-option>
             <mat-option value="romance">Romance</mat-option>
             <mat-option value="thriller">Thriller</mat-option>
             <mat-option value="kids">Kids</mat-option>
