--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -22,11 +22,15 @@
         <h3 class="mt-3">Filters</h3>
         <mat-form-field class="w-100 mt-4" appearance="outline">
           <mat-label>Genre</mat-label>
-          <mat-select>
-            <mat-option value="">Fantasy</mat-option>
-            <mat-option value="">Mystry</mat-option>
-            <mat-option value="">Romance</mat-option>
-            <mat-option value="">Sci-Fi</mat-option>
+          <mat-select [(ngModel)]="selGenre">
+            <mat-option value="action">Action</mat-option>
+            <mat-option value="fantasy">Fantasy</mat-option>
+            <mat-option value="techno-thriller">Techno-Thriller</mat-option>
+            <mat-option value="romance">Romance</mat-option>
+            <mat-option value="thriller">Thriller</mat-option>
+            <mat-option value="kids">Kids</mat-option>
+            <mat-option value="horror">Horror</mat-option>
+
           </mat-select>
         </mat-form-field>
 
