--- a/src/app/authentication/list-rent/list-rent.component.html
+++ b/src/app/authentication/list-rent/list-rent.component.html
@@ -5,7 +5,7 @@
         <h3 class="mt-3">Search</h3>
         <mat-form-field class="w-100 mt-4" appearance="outline">
           <mat-label>Search Novel</mat-label>
-          <input type="text" matInput>
+          <input type="text" #name matInput (change)="searchNovelByTitle(name.value)">
         </mat-form-field>
 
         <mat-form-field class="w-100 mt-2" appearance="outline">
