--- a/src/app/authentication/list-exchange/list-exchange.component.html
+++ b/src/app/authentication/list-exchange/list-exchange.component.html
@@ -69,7 +69,7 @@
 
 
                 <div class="avatar">
-                  <nb-user size="medium" [name]="novel.user.fullname" title="Default" [picture]="url+novel.user.avatar">
+                  <nb-user size="medium" [name]="novel.user.fullname" title="User" [picture]="url+novel.user.avatar">
                   </nb-user>
                 </div>
 
